...
        headerBackTitle: null,
      }),
    },
    ToolsTemp: {
      screen: ToolsAppTemp,
      navigationOptions: () => ({
        headerTitle: "Temperature",
        headerStyle: {
          backgroundColor: '#fff',
          marginHorizontal: 10,
          marginVertical: 5,
          borderBottomWidth: 0,
        },
        headerTintColor: '#3C3C3C'
      }),
    },
    ToolsWeight: {
      screen: ToolsAppWeight,
      navigationOptions: () => ({
        headerTitle: "Weight",
        headerStyle: {
          backgroundColor: '#fff',
          marginHorizontal: 10,
          marginVertical: 5,
          borderBottomWidth: 0,
        },
        headerTintColor: '#3C3C3C'
      }),
    },
    ToolsVolume: {
      screen: ToolsAppVolume,
      navigationOptions: () => ({
        headerTitle: "Volume",
        headerStyle: {
          backgroundColor: '#fff',
          marginHorizontal: 10,
          marginVertical: 5,
          borderBottomWidth: 0,
        },
...
      navigationOptions: {
        tabBarLabel: "List",
      }
    },

    // Tab 4 Tools (Conversion tools)
    Tools: {
      screen: ToolsStack,
      navigationOptions: {
        tabBarLabel: "Tools",
      }
    },

...
